--- a/api/vercel.json
+++ b/api/vercel.json
@@ -8,8 +8,12 @@
   ],
   "routes": [
     {
+      "src": "/socket.io/(.*)",
+      "dest": "/index.js"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "/index.js"
     }
   ]
 }
